Added more lore and fixed Valerio's lore

--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -99,8 +99,8 @@
 
           <p class="castText">Reve, also known as the second advisor to the Emperor and head of intelligence in the Edifice, 
             is a carefree and unbothered soul. He does what he's told, but never without a teasing comment or joke to piss people off. 
-            Though he hardly ever takes things seriously, he knows when he should and will be there to assist right away. 
-            Reve isn't originally from Altipiani, though no one knows for sure where he's from. Some suspect the radiation tainted nation of 
+            Even though he hardly ever takes things seriously, he knows when he should and will be there to assist right away. 
+            Reve isn't originally from Altipiani, but no one knows for sure where he's from. Some suspect the radiation tainted nation of 
             Terpayâtre, yet he never confirms nor denies his nation of origin.
           </p>
 
