Added Valerio's lore

--- a/webpages/allCharacters.html
+++ b/webpages/allCharacters.html
@@ -1376,7 +1376,11 @@
                     
                     <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
-                    <p>(WIP)</p>
+                    <p>
+                      The Emperor of Altipiani, a man who puts the protection of his people above himself. Not a day goes by when he's 
+                      not designing something to either protect or assist his people. Sometimes going through greater lengths than he 
+                      can handle to achieve this, yet the certainty of a safe Altipiani always pushes him to keep going.
+                    </p>
 
                     <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
