Added new Isaac and Nic art

--- a/nationPages/altanawuePages/altanawueMainpage.html
+++ b/nationPages/altanawuePages/altanawueMainpage.html
@@ -61,7 +61,7 @@
 
               <!-- Isaac -->
               <a href="./castPages/isaac.html" class="castCoverTwo">
-                  <img src="altanawueImg/placeholder.png" alt="isaacCover">
+                  <img src="altanawueImg/bigIsaac.png" alt="isaacCover">
               </a>
 
               <a class="castTextTwo" href="./castPages/isaac.html">
