--- a/nationPages/altanawuePages/castPages/isaac.html
+++ b/nationPages/altanawuePages/castPages/isaac.html
@@ -33,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altanawueImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
+          <img src="../altanawueImg/bigIsaac.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Isaac</h2>
 
@@ -100,8 +100,11 @@
           <h2 class="thirdTitle">Art Collection</h2>
 
           <div id="artDisplay">
-            <!-- <img src="../sothleighImg/.png" class="artOne" alt=""> -->
-            <p class="creditOne">Nothing to see here yet</p>
+            <img src="../altanawueImg/bigIsaac.png" class="artOne" alt="isaacHeadshotByTea4Silver">
+            <p class="creditOne">@Tea4Silver</p>
+
+            <img src="../altanawueImg/isaacWithVeil.png" class="artTwo" alt="isaacHeadshotWithVeilByTea4Silver">
+            <p class="creditTwo">@Tea4Silver</p>
           </div>
 
         </div>
