--- a/nationPages/altipianiPages/castPages/nicolas.html
+++ b/nationPages/altipianiPages/castPages/nicolas.html
@@ -33,7 +33,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/bigNic.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/bigNicTea.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Nicolas Raffaelli</h2>
 
@@ -47,7 +47,7 @@
               <div class="slides">
 
                 <div class="slide active">
-                  <p class="creditText">Headshot by: @Ur_Local_Potato_Kai</p>
+                  <p class="creditText">Headshot by: @Tea4Silver</p>
                   <p class="creditText">Full body by: WIP</p>
                   <a href="#artDisplay" class="creditText">v See more v</a>
                 </div>
@@ -104,6 +104,9 @@
           <div id="artDisplay">
             <img src="../altipianiImg/bigNic.png" class="artOne" alt="nicolasHeadShot">
             <p class="creditOne">@Ur_Local_Potato_Kai</p>
+
+            <img src="../altipianiImg/bigNicTea.png" class="artTwo" alt="nicolasHeadShotByTea4Silver">
+            <p class="creditTwo">@Tea4Silver</p>
           </div>
 
         </div>
