--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -59,7 +59,7 @@
 
               <!-- Cario -->
               <a href="./castPages/cario.html" class="castCoverTwo">
-                  <img src="altipianiImg/cario.png" alt="carioCover">
+                  <img src="altipianiImg/bigCario.png" alt="carioCover">
               </a>
 
               <a class="castTextTwo" href="./castPages/cario.html">
@@ -77,7 +77,7 @@
 
               <!-- Nicolas -->
               <a href="./castPages/nicolas.html" class="castCoverFour">
-                  <img src="altipianiImg/nicolas.png" alt="nicolasCover">
+                  <img src="altipianiImg/bigNicTea.png" alt="nicolasCover">
               </a>
 
               <a class="castTextFour" href="./castPages/nicolas.html">
