Added credits, fixed mobile layout for art display

--- a/nationPages/altanawuePages/castPages/isaac.html
+++ b/nationPages/altanawuePages/castPages/isaac.html
@@ -47,7 +47,7 @@
               <div class="slides">
 
                 <div class="slide active">
-                  <p class="creditText">Headshot by: WIP</p>
+                  <p class="creditText">Headshot by: Tea4Silver</p>
                   <p class="creditText">Full body by: WIP</p>
                   <a href="#artDisplay" class="creditText">v See more v</a>
                 </div>
