Added new art slider

--- a/nationPages/altipianiPages/castPages/nicolas.html
+++ b/nationPages/altipianiPages/castPages/nicolas.html
@@ -101,14 +101,28 @@
 
           <h2 class="thirdTitle">Art Collection</h2>
 
-          <div id="artDisplay">
-            <img src="../altipianiImg/bigNic.png" class="artOne" alt="nicolasHeadShot">
-            <p class="creditOne">@Ur_Local_Potato_Kai</p>
+          <div id="artDisplay" class="artSlider">
 
-            <img src="../altipianiImg/bigNicTea.png" class="artTwo" alt="nicolasHeadShotByTea4Silver">
-            <p class="creditTwo">@Tea4Silver</p>
+            <!-- <button class="artBtn" onclick="prevSlide()">&lt;</button> -->
+
+            <div class="artSlides">
+
+                <div class="artSlide active">
+                    <div class="artItem">
+                        <img src="../altipianiImg/bigNic.png" alt="nicHeadshot">
+                        <p>@Ur_Local_Potato_Kai</p>
+                    </div>
+                    <div class="artItem">
+                        <img src="../altipianiImg/bigNicTea.png" alt="nicHeadshotByTea4Silver">
+                        <p>@Tea4Silver</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- <button class="artBtn" onclick="nextSlide()">&gt;</button> -->
+
           </div>
-
         </div>
 
         <footer>
@@ -235,7 +249,7 @@ const nextBtn = document.querySelector('.next');
 
 let current = 0;
 
-function showSlide(index) 
+function showInfoSlide(index) 
 {
   slides.forEach(slide => slide.classList.remove('active'));
   slides[index].classList.add('active');
@@ -244,13 +258,13 @@ function showSlide(index)
 prevBtn.addEventListener('click', () => 
 {
   current = (current - 1 + slides.length) % slides.length;
-  showSlide(current);
+  showInfoSlide(current);
 });
 
 nextBtn.addEventListener('click', () => 
 {
   current = (current + 1) % slides.length;
-  showSlide(current);
+  showInfoSlide(current);
 });
 
 // ====================
@@ -278,6 +292,30 @@ const lightbox = document.getElementById("lightbox");
       lightbox.style.display = "none";
     }
   });
+
+// ====================
+// Art view slider
+// ====================
+let currentArtSlide = 0;
+const artSlides = document.querySelectorAll(".artSlide");
+
+function showArtSlide(index) 
+{
+  artSlides.forEach(slide => slide.classList.remove("active"));
+  artSlides[index].classList.add("active");
+}
+
+function nextSlide() 
+{
+  currentArtSlide = (currentArtSlide + 1) % artSlides.length;
+  showArtSlide(currentArtSlide);
+}
+
+function prevSlide() 
+{
+  currentArtSlide = (currentArtSlide - 1 + artSlides.length) % artSlides.length;
+  showArtSlide(currentArtSlide);
+}
 </script>
 </body>
 </html>
