Added new characters so all characters and Nations

--- a/nationPages/vrieslandPages/vrieslandMainpage.html
+++ b/nationPages/vrieslandPages/vrieslandMainpage.html
@@ -59,13 +59,13 @@
                   <p>Julia (WIP)</p>
               </a>
 
-              <!-- ? -->
-              <a href="./castPages/?.html" class="castCoverTwo">
-                  <img src="vrieslandImg/placeholder.png" alt="?Cover">
+              <!-- Sonja -->
+              <a href="./castPages/sonja.html" class="castCoverTwo">
+                  <img src="vrieslandImg/placeholder.png" alt="sonjaCover">
               </a>
 
-              <a class="castTextTwo" href="./castPages/?.html">
-                  <p>?</p>
+              <a class="castTextTwo" href="./castPages/sonja.html">
+                  <p>Sonja (WIP)</p>
               </a>
 
               <!-- ? -->
@@ -105,19 +105,15 @@
              <h2 class="mentionsTitle">Honorable Mentions</h2>
 
              <div class="mentions">
-                <p class="mention">To</p>
-                <p class="mention">be</p>
-                <p class="mention">added</p>
-
-                <!-- <div class="mention">To Be Added
+                <div class="mention">Louis
                     <div class="mentionInfo">
-                        <h4>To Be Added</h4>
+                        <h4>Louis Broeckman</h4>
                         
                         <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 0rem auto;">
 
                         <p>(WIP)</p>
                     </div>
-                </div>  -->
+                </div> 
              </div>
 
         </div>
