--- a/nationPages/altipianiPages/castPages/valerio.html
+++ b/nationPages/altipianiPages/castPages/valerio.html
@@ -14,9 +14,8 @@
                 <li class="dropdown">
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
+                        <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../nations.html">Nations</a></li>
-                        <li><a href="../../../index.html">Books</a></li>
-                        <li><a href="../../../webpages/projects.html">Projects</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
