Fixed quote issue on mobile

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
             </ul>
         </header>
 
-        <h1 id="mainTitle">Mindbound</h1>
-        <p class="upperQuote"><i>Follow us on our journey of creation</i></p>
-        
-        <img src="img/homeHeader.png" alt="headerImage" class="headerImg">
+        <div class="topPart">
+            <img src="img/homeHeader.png" alt="headerImage" class="headerImg">
+            <div class="topPartContent">
+                <h1 id="mainTitle">Mindbound</h1>
+                <p class="upperQuote"><i>Follow us on our journey of creation</i></p>
+            </div>
+        </div>
 
         <div class="middleBlock">
             
