Adjusted title and quote site on mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     ideas for Mindbound. If you are interested in reading any of these, you can click the links below!
                 </p>
                 <a href="webpages/msInfo.html" class="mainStoryLink">Main Series</a>
-                <a href="#" class="silentStoryLink">Silent Stories</a>
+                <a href="#" class="silentStoryLink">Silent Stories (WIP)</a>
             </div>
 
             <hr>
@@ -128,7 +128,7 @@
                         we have planned out so far, we proudly invite you to press the link below and read all about the things 
                         we have already come up with!
                     </p>
-                    <a href="#" class="gameProjectLink">Read more</a>
+                    <a href="#" class="gameProjectLink">Read more (WIP)</a>
                 </div>
 
                 <!-- Skins -->
