--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     ideas for Mindbound. If you are interested in reading any of these, you can click the links below!
                 </p>
                 <a href="webpages/msInfo.html" class="mainStoryLink">Main Series</a>
-                <a href="#" class="silentStoryLink">Silent Stories (WIP)</a>
+                <a href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" class="silentStoryLink" target="_blank" rel="noopener noreferrer">Silent Stories</a>
             </div>
 
             <hr>
@@ -143,7 +143,7 @@
                         would be able to use them too if you wanted or just to see what the characters looked like. 
                         We posted them on Skindex, so if you're curious, check out the link below!
                     </p>
-                    <a href="https://www.minecraftskins.com/profile/8549244/domennotorre" class="skinsLink">To Skindex</a>
+                    <a href="https://www.minecraftskins.com/profile/8549244/domennotorre" class="skinsLink" target="_blank" rel="noopener noreferrer">To Skindex</a>
                 </div>
             </div>
 
