Changed back button on mobile and storyinfo page

--- a/webpages/msInfo.html
+++ b/webpages/msInfo.html
@@ -48,6 +48,7 @@
                 </span> 
 
                 <div class="middleBlockLowerContent">
+                  <div class="bookContentOne">
 
                     <h3 class="bookTitleOne" id="bookOne">Inaugurate</h3>
 
@@ -67,7 +68,92 @@
                     </div>
 
                     <p class="whereToReadOne">Read on: <a href="https://www.wattpad.com/story/368390914-mindbound-inaugurate" target="_blank" rel="noopener noreferrer">Wattpad</a></p>
+                  </div>
 
+                  <div class="bookProgressOne">
+                    <div class="progressBox">
+                      <h2>Chapter Progress</h2>
+                      <h3>Inaugurate</h3>
+
+                      <hr>
+
+                      <table class="chapterTable">
+                        <thead>
+                            <tr>
+                                <th>Chapter</th>
+                                <th>Started writing</th>
+                                <th>Status</th>
+                                <th>Finished</th>
+                            </tr>
+                        </thead>
+                        <hr>
+                        <tbody>
+                            <tr>
+                                <td>Chapter 1</td>
+                                <td>✓</td>
+                                <td>Rewriting</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 2</td>
+                                <td>X</td>
+                                <td>On hold</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 3</td>
+                                <td>X</td>
+                                <td>On hold</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 3.5</td>
+                                <td>X</td>
+                                <td>On hold</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 4</td>
+                                <td>X</td>
+                                <td>On hold</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 5</td>
+                                <td>X</td>
+                                <td>On hold</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 5.5</td>
+                                <td>✓</td>
+                                <td>On hold</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 6</td>
+                                <td>✓</td>
+                                <td>Writing</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 7</td>
+                                <td>X</td>
+                                <td>Outlining</td>
+                                <td>X</td>
+                            </tr>
+                            <tr>
+                                <td>Chapter 8</td>
+                                <td>✓</td>
+                                <td>On Hold</td>
+                                <td>X</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                      
+                      <p class="updateInfo">Updated: 18/2/2025</p>
+                    </div>
+                  </div>
                 </div>
             </div>
 
