Added new Reve art and updated the story info page

--- a/index.html
+++ b/index.html
@@ -156,10 +156,8 @@
                     <hr>
 
                     <p class="updateText">
-                        Added the new mainpage! With this some other pages have been removed: 
-                        Projects page, the books page and the story project page. 
-                        The header has also been changed, the former books page is now known as the homepage and 
-                        the link to the projects page has been removed. We are still working on the other pages, 
+                        Added new Reve art by @Ur_Local_Potato_Kai and updated the story info page to now show our progress! 
+                        We are still working on the other pages, 
                         which will be marked with (WIP) until completion.
                     </p>
 
