--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -85,7 +85,7 @@
 
               <!-- Reve -->
               <a href="./castPages/reve.html" class="castCoverFive">
-                  <img src="altipianiImg/placeholder.png" alt="reveCover">
+                  <img src="altipianiImg/reve.png" alt="reveCover">
               </a>
 
               <a class="castTextFive" href="./castPages/reve.html">
