--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -32,7 +32,7 @@
 
         <div class="middleBlock">
 
-          <img src="../altipianiImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
+          <img src="../altipianiImg/reve.png" alt="castImage" class="sideCastImg">
             
           <h2 class="secondTitle">Reve Nox Craven</h2>
 
@@ -46,7 +46,7 @@
               <div class="slides">
 
                 <div class="slide active">
-                  <p class="creditText">Headshot by: WIP</p>
+                  <p class="creditText">Headshot by: @Ur_Local_Potato_Kai</p>
                   <p class="creditText">Full body by: WIP</p>
                   <a href="#artDisplay" class="creditText">v See more v</a>
                 </div>
@@ -116,6 +116,11 @@
                 <div class="artSlide active">
                     <div class="artItem">
                         <img src="../altipianiImg/bigReve.png" alt="reveCollabHeadshot">
+                        <p>@Ur_Local_Potato_Kai</p>
+                    </div>
+
+                    <div class="artItem">
+                        <img src="../altipianiImg/reve.png" alt="reveHeadshot">
                         <p>@Ur_Local_Potato_Kai</p>
                     </div>
                 </div>
