Changed mobile fontSizes, Added SilentStoryPage

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     ideas for Mindbound. If you are interested in reading any of these, you can click the links below!
                 </p>
                 <a href="webpages/msInfo.html" class="mainStoryLink">Main Series</a>
-                <a href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" class="silentStoryLink" target="_blank" rel="noopener noreferrer">Silent Stories</a>
+                <a href="webpages/ssInfo.html" class="silentStoryLink">Silent Stories</a>
             </div>
 
             <hr>
