--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     We used the map to come up with the first few nations and after a while expanded it to what it is now. 
                     It's about 4643 years old by the time the main story takes place. Over the years a lot has happen, Shokuminchi Kokka 
                     taking over Viharkalan, a union being formed with all the nations, the rune wars and of course the tower 
-                    appearing in Midprot only a year before the main story begins. Each nations has its own culture and lore, 
+                    appearing in Midprot only a year before the main story begins. Each nation has its own culture and lore, 
                     so if you're curious about them, click the link below and you'll be taken to their pages!
                 </p>
 
