Added Riimut lore and fixed typos

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                     <p class="gameText">
                         <img src="img/gameProjectImg.png" class="gameImg" alt="gameImg">
                         We ourselves like to play games in our free time, with a preference for open world games 
-                        like Wuthering Waves, Genshin Impact, Horizon and Ark, we realized how much we would love it to 
-                        have our own game to give to the people who enjoy the world of mindbound, and with that we started 
-                        planning, and we now already have quite some plans made for it, one of the main things holding is back 
+                        like Wuthering Waves, Genshin Impact, Horizon and Ark. We realized how much we would love to 
+                        have our own game to give to the people who enjoy the world of mindbound. And with that we started 
+                        planning, we now already have quite some plans made for it, one of the main things holding us back 
                         being the lack of knowledge about how to actually make a proper game. But if you are interested in what 
                         we have planned out so far, we proudly invite you to press the link below and read all about the things 
                         we have already come up with!
