--- a/nationPages/riimutPages/riimutMainpage.html
+++ b/nationPages/riimutPages/riimutMainpage.html
@@ -37,7 +37,11 @@
             <h2 class="secondTitleRiimut">Jäädytetyt Riimut</h2>
 
             <p class="nationText">
-              (WIP)
+              Jäädytetyt Riimut is a nation covered in a thick layer of snow and ice, where even during the summer the 
+              ice is thick enough to skate on, yet thin enough for some creatures to break through...
+              Most people think the nation is relatively small, but what most don't know is that if you continue venturing west, 
+              you'll find the true capital. This is where nearly all inhabitants of this nation reside, with every village in the east 
+              having been killed out during the rune war, except for one, which was kept safe by a familiar figure...
             </p>
 
             <h2 class="thirdTitle">Cast</h2>
