Added Avery to the cast

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                         <p class="characterCredit">Anastasia art by @Tea4Silver</p>
                     </div>
 
-                    <!-- <div class="characterSlide">
-                        <img src="nationPages/wastelandPages/wastelandImg/bigAve.png" alt="avery">
-                        <p class="characterCredit">Art by @Tea4Silver</p>
-                    </div> -->
+                    <div class="characterSlide">
+                        <img src="nationPages/wastelandPages/wastelandImg/avery.png" alt="avery">
+                        <p class="characterCredit">Avery art by @Tea4Silver</p>
+                    </div>
 
                     <div class="characterSlide">
                         <img src="nationPages/altanawuePages/altanawueImg/bigIsaac.png" alt="isaac">
