Added the Wasteland

--- a/nationPages/wastelandPages/wastelandMainpage.html
+++ b/nationPages/wastelandPages/wastelandMainpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terpayâtre - Mindbound</title>
+    <title>The Wasteland - Mindbound</title>
     <link rel="stylesheet" href="../nation.css" type="text/css">
      <link rel="icon" type="image/x-icon" href="../../img/favi.png">
 </head>
@@ -28,65 +28,57 @@
 
         <h1 class="mainTitleWhite">Mindbound</h1>
         
-        <img src="terpayatreImg/terpayatreHeader.png" alt="headerImage" class="headerImg">
+        <img src="wastelandImg/wastelandHeader.png" alt="headerImage" class="headerImg">
 
         <div class="middleBlock">
 
             <a href="javascript:history.back()" class="backButton">&lt;Back</a>
             
-            <h2 class="secondTitle">Terpayâtre</h2>
+            <h2 class="secondTitle">The Wasteland</h2>
 
             <p class="nationText">
-              Terpayatre is nothing but 
-              <span class="redactedText">_ ___ _____</span>
-              created by a deity, for all who you find there are 
-              <span class="redactedText">___ ______ ____ _____</span> 
-              by the god of theatre, creating a world of their own entertainment with 
-              <span class="redactedText">__ ______ _ ___ _____ ___ ____</span> 
-              worshiped them.
-              This nation used to be just like any other, until the god realized that they could 
-              <span class="redactedText">_____ ___ _____</span> 
-              of its people, and now this god has become so taken up by its own version of the nation, that it will 
-              <span class="redactedText">__ ______ ___ ______ ___ ____</span>
-              , 
-              <span class="redactedText">___ __ ___ __ _____ __ ___ ______</span> 
-              for their grand play.
+              The wasteland is as its name suggests a large wasteland, just the remains of a once great nation, 
+              destroyed by a nuclear fallout. However, some people managed to survive as it appeared that a portion of the 
+              people had a gene that made them immune to the dangerous infection of radioactive waste, these people formed their own 
+              tribes. They still remain in the nation, not being allowed to leave as surrounding nations decided it would be unsafe to 
+              risk the radiation being able to escape. A wall was placed surrounding the nation, only letting people through at specific 
+              guarded gates.
             </p>
 
             <h2 class="thirdTitle">Cast</h2>
 
             <div class="middleBlockLowerContent">
 
-              <!-- HPeep1 -->
-              <a href="./castPages/lpeep1.html" class="castCoverOne">
-                  <img src="terpayatreImg/placeholder.png" alt="lpeep1Cover">
+              <!-- Aver -->
+              <a href="./castPages/avery.html" class="castCoverOne">
+                  <img src="wastelandImg/avery.png" alt="averyHeadshot">
               </a>
 
-              <a class="castTextOne" href="./castPages/lpeep1.html">
-                  <p>?</p>
-              </a>
-
-              <!-- HPeep2 -->
-              <a href="./castPages/lpeep2.html" class="castCoverTwo">
-                  <img src="terpayatreImg/placeholder.png" alt="lpeep2Cover">
-              </a>
-
-              <a class="castTextTwo" href="./castPages/lpeep2.html">
-                  <p>?</p>
+              <a class="castTextOne" href="./castPages/avery.html">
+                  <p>Avery (WIP)</p>
               </a>
 
               <!-- HPeep3 -->
-              <a href="./castPages/lpeep3.html" class="castCoverThree">
-                  <img src="terpayatreImg/placeholder.png" alt="lpeep3Cover">
+              <a href="./castPages/jBoy.html" class="castCoverTwo">
+                  <img src="wastelandImg/placeholder.png" alt="jBoyCover">
               </a>
 
-              <a class="castTextThree" href="./castPages/lpeep3.html">
-                  <p>?</p>
+              <a class="castTextTwo" href="./castPages/jBoy.html">
+                  <p>J-Boy (WIP)</p>
+              </a>
+
+              <!-- Noah -->
+              <a href="./castPages/noah.html" class="castCoverThree">
+                  <img src="wastelandImg/placeholder.png" alt="noahCover">
+              </a>
+
+              <a class="castTextThree" href="./castPages/noah.html">
+                  <p>Noah (WIP)</p>
               </a>
 
               <!-- HPeep4 -->
               <a href="./castPages/lpeep4.html" class="castCoverFour">
-                  <img src="terpayatreImg/placeholder.png" alt="lpeep4Cover">
+                  <img src="wastelandImg/placeholder.png" alt="lpeep4Cover">
               </a>
 
               <a class="castTextFour" href="./castPages/lpeep4.html">
@@ -98,13 +90,13 @@
 
             <div class="middleBlockOneDivinity">
 
-              <!-- Théana -->
-              <a href="./divinityPages/theana.html" class="divinityOneCover">
-                  <img src="terpayatreImg/placeholder.png" alt="theanaCover">
+              <!-- Azathoth -->
+              <a href="./divinityPages/azathoth.html" class="divinityOneCover">
+                  <img src="wastelandImg/placeholder.png" alt="azathothCover">
               </a>
 
-              <a class="divinityOneText" href="./divinityPages/theana.html">
-                  <p>Théana (WIP)</p>
+              <a class="divinityOneText" href="./divinityPages/azathoth.html">
+                  <p>Azathoth (WIP)</p>
               </a>
             </div>
 
@@ -135,7 +127,7 @@
                         <img src="../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
-                <img src="terpayatreImg/terpayatreFooter.png" alt="footerImage" class="footerImg">
+                <img src="wastelandImg/wastelandFooter.png" alt="footerImage" class="footerImg">
             </div>
         </footer>
     </main>
