--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -61,7 +61,7 @@
                 <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi Kokka(WIP)</a></li>
                 <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh</a></li>
                 <li><a class="terpayatre" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre</a></li>
-                <li><a class="wasteland" href="./wastelandPages/wastelandMainpage.html">The Wasteland(WIP)</a></li>
+                <li><a class="wasteland" href="./wastelandPages/wastelandMainpage.html">The Wasteland</a></li>
                 <li><a class="vriesland" href="./vrieslandPages/vrieslandMainpage.html">Vriesland</a></li>
                 <li><a class="zloyvor" href="./zloyvorPages/zloyvorMainpage.html">Zloyvor</a></li>
             </ul>
